Separation of core, and begin plugin integration