@@ -2,7 +2,7 @@ package io.github.railroad.config;
 
 import com.google.gson.JsonObject;
 import io.github.railroad.Railroad;
-import org.jetbrains.annotations.Nullable;
+import io.github.railroad.utility.OperatingSystem;
 
 import java.io.IOException;
 import java.nio.file.Files;
@@ -14,30 +14,31 @@ public final class ConfigHandler {
     private final Config config = new Config();
 
     public static Path getConfigDirectory() {
-        String os = System.getProperty("os.name"); // TODO: Create Enum for OS
-        String homePath = System.getProperty("user.home");
-        if (os.startsWith("Linux")) {
-            return Paths.get(homePath, ".config", "Railroad");
-        } else if (os.startsWith("Windows")) {
-            return Paths.get(homePath, "AppData", "Roaming", "Railroad");
-        } else if (os.startsWith("Mac") || os.startsWith("Darwin")) {
-            return Paths.get(homePath, "Library", "Application Support", "Railroad");
-        } else {
-            return Paths.get(homePath, "Railroad");
-        }
-    }
+        OperatingSystem os = OperatingSystem.CURRENT;
+        String userHome = System.getProperty("user.home");
+        return switch (os) {
+            case WINDOWS -> {
+                String roaming = System.getenv("APPDATA");
+                if(roaming != null && !roaming.isBlank()) {
+                    yield Path.of(roaming, "Railroad");
+                }
 
-    //What's even the point of this? It's not used anywhere
-    public static void updateConfig(@Nullable Config newConfig) {
-        Railroad.LOGGER.info("{} config file", newConfig == null ? "Initializing" : "Updating");
+                yield Path.of(userHome, "AppData", "Roaming", "Railroad");
+            }
+            case MAC -> Path.of(userHome, "Library", "Application Support", "Railroad");
+            case LINUX -> {
+                String xdgConfigHome = System.getenv("XDG_CONFIG_HOME");
+                if (xdgConfigHome != null && !xdgConfigHome.isBlank()) {
+                    yield Paths.get(xdgConfigHome, "Railroad");
+                }
 
-        Path railroadDataPath = getConfigDirectory();
-        try {
-            Files.createDirectories(railroadDataPath);
-            Files.writeString(railroadDataPath.resolve("config.json"), Railroad.GSON.toJson(INSTANCE.config.toJson()));
-        } catch (IOException exception) {
-            throw new IllegalStateException("Error updating config.json", exception);
-        }
+                yield Path.of(userHome, ".config", "Railroad");
+            }
+            case UNKNOWN -> {
+                Railroad.LOGGER.warn("Unknown operating system, using default config directory");
+                yield Paths.get(userHome, "Railroad");
+            }
+        };
     }
 
     public static void saveConfig() {
